yaml/qa/deletebook-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-deletebook
  labels:
    app: delete-book
spec:
  replicas: 3 
  selector:
    matchLabels:
      app: delete-book
  template:
    metadata:
      labels:
        app: delete-book
    spec:
      containers:
      - name: deletebook
        image: pkarthick83/appinframodwithgke:deletebook-latest
        ports:
          - containerPort: 8080

        readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
            failureThreshold: 3
