yaml/qa/frontend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-frontend
  labels:
    app: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: gcr.io/PROJECT_ID/frontend:latest
        ports:
        - containerPort: 80
